fix contrast color

--- a/less/navs.less
+++ b/less/navs.less
@@ -164,7 +164,7 @@
         background-color: @@color;
       }
       .nav-tabs > li > a {
-
+        color: contrast(@@color, @grey900, @grey50);
         &:hover {
           @c : "@{color}400";
           background-color: @@c;
